--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/fc61c8db65.js" crossorigin="anonymous"></script>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow&family=DM+Sans&family=Poppins:wght@600&family=Roboto&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 
-<body style="background-color: #F3F1FF;">
+<body style="background-color: #F3F1FF; font-family: 'Barlow', sans-serif;
+font-family: 'DM Sans', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Slab', serif;">
     <header>
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark w-100" style="background-color: #562EFF; height: 90px;">
@@ -81,7 +91,7 @@
             </div>
 
             <!-- Top Blogs -->
-            <h2 class="my-3 py-3" style="color: #562EFF;">Top Player</h2>
+            <h2 class="my-3 py-3" style="color: #562EFF;">Top Blog</h2>
             <div class="row g-4">
                 <div class="col-md-12 col-lg-6 d-flex">
                     <div class="row">
@@ -131,7 +141,7 @@
         </section>
         <!-- Latest Course -->
         <section class="container">
-            <h2 class="my-3 py-3" style="color: #562EFF;">Latest Course</h2>
+            <h2 class="my-4 pt-5 pb-3" style="color: #562EFF;">Latest Course</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div style="width: 253px; height: 270px;" class="card">
