--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ font-family: 'Roboto Slab', serif;">
     </header>
 
     <main>
-        <section class="container bg-white">
+        <section class="container bg-white pb-4">
             <!-- Top Player -->
             <h2 class="my-5 pt-3" style="color: #562EFF;">Top Player</h2>
             <div class="row gy-4">
@@ -140,8 +140,8 @@ font-family: 'Roboto Slab', serif;">
             </div>
         </section>
         <!-- Latest Course -->
-        <section class="container">
-            <h2 class="my-4 pt-5 pb-3" style="color: #562EFF;">Latest Course</h2>
+        <section class="container bg-white">
+            <h2 class="my-4 pt-3 pb-3" style="color: #562EFF;">Latest Course</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div style="width: 253px; height: 270px;" class="card">
